HTML Form to PDF is Ready 👍 Frontend => added various rendring for tasks after user actions, added a confirmation dialog for the delete button, fixed some layout issues. Backend => added extra step to the html to pdf process.

--- a/simple-form-frontend/src/components/Tasks/Tasks.css
+++ b/simple-form-frontend/src/components/Tasks/Tasks.css
@@ -15,12 +15,13 @@
 }
 
 .sticky {
-    position: fixed;
+    position: absolute;
     width: 87.4%;
 }
 
 .tasksdiv {
     padding-top: 4.5%;
+    margin-top: 1.75%;
 }
 
 ul {
