--- a/simple-form-frontend/src/index.css
+++ b/simple-form-frontend/src/index.css
@@ -226,7 +226,7 @@ input[type="text"],
 input[type="number"],
 textarea,
 select {
-  width: 400px;
+  width: 00px;
 }
 
 select {
@@ -644,7 +644,7 @@ input[type="text"],
 input[type="number"],
 textarea,
 select {
-  width: 400px;
+  width: 500px;
 }
 
 label {
